name:                bassbull
version:             0.1.0.0
synopsis:            Processing baseball CSV data 
description:         Baseball data analysis
homepage:            https://github.com/cwissO/bassbull#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Oswald
maintainer:           
copyright:           2016, Chris Oswald 
category:            Data 
build-type:          Simple
cabal-version:       >=1.10

executable bassbull
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base >= 4.7 && <5,
                       bytestring,
                       vector,
                       cassava
